--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ html{
 }
 body{
     background-color: #faf7eb;
+    display: flex;
+    justify-content: center;  /* centers horizontally */
+    align-items: center;  
     padding: 0;
     margin: 0;
 }
